--- a/res/layout/fragment_eat.xml
+++ b/res/layout/fragment_eat.xml
@@ -22,18 +22,31 @@
                 android:src="@drawable/icon_location_home_fragment_gray"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"/>
-            <TextView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="觅食"
-                android:textSize="20dp"
-                android:textColor="@color/common_botton_bar_blue"
-                android:gravity="center" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_dress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="北京市"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="觅食"
+                    android:textSize="20dp"
+                    android:textColor="@color/common_botton_bar_blue"
+                    android:gravity="center_horizontal|center_vertical" />
+            </LinearLayout>
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="center"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:scaleType="centerInside"
                 android:src="@drawable/btn_home_search"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="10dp" />
